02-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-soccerapp-mysql-service          # changed
spec:
  selector:
    app: mysoccer-mysql                     # changed
  ports:
    - name: mysql-prot
      protocol: TCP
      port: 3306
      targetPort: 3306
    - name: mysql-xproto
      protocol: TCP
      port: 33060
      targetPort: 33060
