04-app-deployment-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-soccer-app-deployment                                                             # changed
  labels:
    app: my-soccer-app-deployment                                                             # changed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myexpressapp                                                                       
  template:
    metadata:
      labels:
        app: myexpressapp
    spec:
      # This uses our app container image
      # Works for minikube only since we didn't publish the image
      containers:
        - name: myexpressapp
          image: my-soccer-web-app                                                               # changed
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
#         resources:
#           requests:
#             cpu: 1
#             memory: "100M"
#           limits:
#             cpu: 1
#             memory: "100M"

---
kind: Service
apiVersion: v1
metadata:
  name: my-soccer-app-service                                                           # changed
spec:
  selector:
    app: myexpressapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-soccer-app-ingress                                                       # changed
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: my-soccer-app-service                                      #changed
              servicePort: 8080
